3º Commit - Adicionando os primeiros métodos à interface grafica principal

--- a/Chat/ChatMulticast/src/main/java/com/mycompany/chatmulticast/MulticastChat.form
+++ b/Chat/ChatMulticast/src/main/java/com/mycompany/chatmulticast/MulticastChat.form
@@ -96,6 +96,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Join"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonJoinActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonLeave">
       <Properties>
@@ -138,6 +141,9 @@
         <Property name="text" type="java.lang.String" value="Send"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSendActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
