--- a/Chat/ChatMulticast/src/main/java/com/mycompany/chatmulticast/MulticastChat.form
+++ b/Chat/ChatMulticast/src/main/java/com/mycompany/chatmulticast/MulticastChat.form
@@ -105,6 +105,9 @@
         <Property name="text" type="java.lang.String" value="Leave"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLeaveActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
